fix overflowing textbox

--- a/app.css
+++ b/app.css
@@ -26,6 +26,7 @@ body, html {
   width: 100%;
   height: 100%;
   font-size: 5em;
+  overflow: hidden;
 }
 
 .gridButtonRow5 {
